--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src/Presentation/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@eventstore/db-client": "^6.1.0",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "http-problem-details": "^0.1.5",
     "uuid": "^9.0.1"
   }
